--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <title>Beautify.css Demo</title>
   <link rel="stylesheet" href="https://magarevedant.github.io/beautify/beautify.css" />
 </head>
-<body class="bg-light txt-dark p-4 fade-in">
+<body class="bg-light txt-dark p-0 fade-in">
 
   <!-- Navbar -->
-  <nav class="navbar navbar-dark shadow mb-4">
+  <nav class="navbar navbar-dark shadow mb-4 p-4">
     <a href="#" class="logo txt-white">Beautify</a>
     <div class="nav-links">
       <a href="#" class="txt-white">Home</a>
